styles/style.css
/* ... */
.footer-element .illustration img {
    width: 10em;
    height: 10em;
    padding-top: 5em;
}

.footer-element .separator {
    width: 80%;
    background-color: var(--bg-footer);
    height: 3px;
    border-radius: 10px;
}

.footer-element .location-name {
    font-weight: bold;
    font-size: 1.5em;
    text-align: left;
}

.footer-element .contact-info {
    display: flex;
    flex-direction: row;
    gap: 10px;
}

.footer-element .contact-info {
    font-size: 1.5em;
}

.footer-element .go-to-location-button {
    font-size: 1.2em;
    font-weight: bold;
    margin-bottom: 5em;
    display: flex;
    flex-direction: row;
    gap: .5em;
}


/* RESPONSIVENESS */

@media only screen and (max-width: 1535px) {
     :root {
        --p-navbar: 1.8em 10em 1.8em 10em;
        --p-btn-navbar: 3rem;
    }
}

@media only screen and (max-width: 1375px) {
     :root {
        --p-navbar: 1.8em 5em 1.8em 5em;
        --fs-about-us: 1.5em;
        --p-about-us: 0em 8em 0em 8em;
    }
}

@media only screen and (max-width: 1205px) {
     :root {
        --p-navbar: 1.8em 2em 1.8em 2em;
        --p-btn-navbar: 0.5rem;
    }
}

@media only screen and (max-width: 1045px) {
     :root {
        --p-navbar: 1.8em 1em 1.8em 1em;
        --p-btn-navbar: 0rem;
    }
}


/* tablet and below */

@media only screen and (max-width: 1024px) {
     :root {
        --p-navbar: 1em 0em 1em 0em;
        --fs-about-us: 1.2em;
        --fs-services-header: 2.2rem;
        --fs-services-li: 1.3rem;
        --p-between-sections: 5rem;
        --img-coffin-hight: 42em;
        --img-coffin-width: 350px;
    }
    .nav-items {
        display: none;
    }
    .navbar {
        justify-content: center !important;
    }
    .checkbox {
        display: block;
    }
    .hamburger-lines {
        display: flex;
    }
    .open {
        height: 100% !important;
        opacity: 1 !important;
    }
}

@media only screen and (max-width: 1135px) {
     :root {
        --fs-slogan: 2rem !important;
        --slogan-img-height: 6rem !important;
        --p-about-us: 0em 12em 0em 12em;
    }
}

@media only screen and (max-width: 970px) {
    .img-slider-container {
        flex-direction: column-reverse !important;
        align-items: center;
    }
    .pricing {
        text-align: center;
        display: flex;
        align-items: center;
        justify-content: center;
        flex-direction: column;
    }
}

@media only screen and (max-width: 725px) {
     :root {
        --pidgeon-height-width: 5rem;
    }
    .footer {
        flex-direction: column;
        justify-content: center;
        align-items: center;
        gap: 1em;
        height: auto;
        margin-top: var(--p-between-sections);
    }
    .first {
        margin-bottom: 0px;
    }
    .second {
        margin-bottom: 0px;
    }
    .before-footer {
        margin-bottom: initial;
    }
}

@media only screen and (max-width: 700px) {
     :root {
        --p-about-us: 0em 6em 0em 6em;
    }
}

@media only screen and (max-width: 625px) {
     :root {
        --fs-slogan: 1.3rem !important;
        --fs-about-us: 1rem;
        --slogan-img-height: 3.5rem !important;
        --fs-services-header: 2rem;
        --fs-services-li: 1rem;
        --p-between-sections: 3rem;
        --img-coffin-hight: 40em;
        --img-coffin-width: 300px;
    }
}

@media only screen and (max-width: 570px) {
    .mobile-nav {
        top: 4em;
    }
     :root {
        --fs-logo: 2em;
        --stripe-size: 5em;
    }
}

@media only screen and (max-width: 455px) {
     :root {
        --pidgeon-height-width: 3rem;
    }
}

@media only screen and (max-width: 395px) {
    .mobile-nav {
        top: 3em;
    }
     :root {
        --fs-slogan: 1rem !important;
        --slogan-img-height: 3rem !important;
        --fs-logo: 1.5em;
    }
}

@media only screen and (max-width: 365px) {
    #wreath .header-text {
        width: min-content;
    }
    .pidgeon {
        display: none;
    }
     :root {
        --p-about-us: 0em 4em 0em 4em;
    }
}

@media only screen and (max-width: 290px) {
     :root {
        --p-about-us: 0em 2em 0em 2em;
    }
}


/* ANIMATIONS */

@keyframes appear {
    from {
        opacity: 0;
        transform: translateY(40%);
    }
    to {
        opacity: 1;
        transform: translateY(0%);
    }
}

@keyframes appear-side {
    from {
        opacity: 0;
        transform: translateX(-40%);
    }
    to {
        opacity: 1;
        transform: translateX(0%);
    }
}

@keyframes appear-side-right {
    from {
        opacity: 0;
        transform: translateX(40%);
    }
    to {
        opacity: 1;
        transform: translateX(0%);
    }
}


/* CSS HARD RESET */

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    font: inherit;
    vertical-align: baseline;
}

a {
    text-decoration: none;
    color: inherit;
}

html {
    scroll-behavior: smooth;
}

body {
    overflow-x: hidden;
}


/* HTML5 display-role reset for older browsers */

article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
    display: block;
}

body {
    line-height: 1;
}

ol,
ul {
    list-style: none;
}

blockquote,
q {
    quotes: none;
}

blockquote:before,
blockquote:after,
q:before,
q:after {
    content: '';
    content: none;
}

table {
    border-collapse: collapse;
    border-spacing: 0;
}

